<resources>
    <string name="app_name">CAMLS</string>
    <string name="title_activity_login">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_visitor">Visitor</string>
    <string name="action_Register">Register</string>
    <string name="action_exit">Exit</string>
    <string name="action_Forgetpwd">Forget Password?</string>
    <string name="action_get_checknum">VerifyCode</string>
    <string name="action_get_checknum_sent">VerifyCode send to mailbox</string>
    <string name="action_get_checknum_sent_failed">Failure to transmission Verification code</string>
    <string name="action_no_user">User not exist</string>
    <string name="action_get_checknum_aleady_register">Mailbox has been used</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">Invalid mailbox</string>
    <string name="error_invalid_password">Input password with 8-16 bits</string>
    <string name="error_invalid_confirm_password">Double password inconsistency</string>
    <string name="error_invalid_checknum">Input correct identifying code</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Input effective information</string>
    <string name="error_login_failed">Invalid user or password</string>
    <string name="error_network_status">Network error, try again</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">Register</string>
    <string name="action_reset_pwd_success">Change password successful</string>
    <string name="action_reset_pwdr_failed0">Change password failure</string>
    <string name="action_reset_pwd_failed1">Change password failure</string>
    <string name="action_reset_pwd_failed2">Check code error</string>
    <string name="action_reset_pwd_failed3">Check code time-out</string>
    <string name="action_get_register_success">Register successful</string>
    <string name="action_get_register_failed0">Register failure</string>
    <string name="action_get_register_failed1">User existence</string>
    <string name="action_get_register_failed2">Check code error</string>
    <string name="action_get_register_failed3">Check code time-out</string>
    <string name="action_send_pws_success">Password send to mailbox</string>
    <string name="action_send_pws_failed">Request failure</string>
    <string name="title_main_dev_list">Device List</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_add_device">Add device</string>
    <string name="error_dev_pass">Wrong password, try again</string>
    <string name="string_dev_password">Password:</string>
    <string name="action_change_password">Set password</string>
    <string name="action_device_password_manager">Manage password</string>
    <string name="action_change">Renewal</string>
    <string name="action_add_device_search">Add device under the same router (LAN search)</string>
    <string name="action_device_share">Share</string>
    <string name="action_device_play_record">Playback</string>
    <string name="action_device_play_setting">Set</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share_manager">Share management</string>
    <string name="action_share_account_manager">Share account management</string>
    <string name="action_share_aud">Audio</string>
    <string name="action_share_vid">Video</string>
    <string name="action_share_push">Push</string>
    <string name="action_share_playback">Playback</string>
    <string name="action_share_setting">Set</string>
    <string name="action_share_control">Control</string>
    <string name="action_generate_share">Generate sharing</string>
    <string name="action_add_share_device">Add share device(scan QR code)</string>
    <string name="action_net_not_connect">Not connected to device</string>
    <string name="action_not_exist_sd">Device not exist SD</string>
    <string name="action_alarm">Alarm</string>
    <string name="action_snapshot">Snapshot</string>
    <string name="action_speech">Talk back</string>
    <string name="action_record">Video</string>
    <string name="action_slient">Slient</string>
    <string name="action_led">Light</string>
    <string name="action_ptz">Coud platform</string>
    <string name="action_pix_low">Standard clear</string>
    <string name="action_pix_high">High definition</string>
    <string name="action_ok">Confirm</string>
    <string name="action_send_verification_number">Send identifying code</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add_one_key_setting">Smart Add</string>
    <string name="action_add_ap_sta">Add AP to STA</string>
    <string name="action_add_ap">AP hot spot direct connection</string>
    <string name="action_media">Image</string>
    <string name="action_one_key_setting_desc0">1.Input the password of the router\n2.Press and hold the RESET button for 5 seconds, \n3.Heard \"wait to connect \" or when the Red and Blue light flicker,\n4.Press next.</string>
    <string name="action_one_key_setting_desc1">Heard \" configuration success\" or when the Red and Blue light are turned on at the same time, search equipment.</string>
    <string name="string_tip">Kindly reminder</string>
    <string name="ssid">Router SSID</string>
    <string name="ssid_pwd">Password</string>
    <string name="next">Next</string>
    <string name="OK">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="device_old_pwd">Old Password</string>
    <string name="device_new_pwd">New Password</string>
    <string name="device_confirm_pwd">Confirm Password</string>
    <string name="action_setting">SeSt</string>
    <string name="action_dev_setting">Device settings</string>
    <string name="device_name">Device Name</string>
    <string name="device_pwd">Connect password</string>
    <string name="action_device_pwd">Manage password</string>
    <string name="action_change_device_pwd">Change password</string>
    <string name="device_version">Device Version</string>
    <string name="action_delete_device">Delete device</string>
    <string name="action_led_control">LED control</string>
    <string name="action_led_model">Light up mode</string>
    <string name="action_led_model_1">Auto</string>
    <string name="action_led_model_2">Manual</string>
    <string name="action_led_model_3">Timing</string>
    <string name="action_led_model_4">D2D</string>
    <string name="action_time">Light time</string>
    <string name="action_led_open_time">Light Time(second)</string>
    <string name="action_led_sensitive">Photosensitivity</string>
    <string name="action_led_brightness">Adjust Brightness</string>
    <string name="action_level_high">High</string>
    <string name="action_level_middle">Middle</string>
    <string name="action_level_low">Low</string>
    <string name="action_time_start">Starttime</string>
    <string name="action_time_stop">Stoptime</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select all</string>
    <string name="action_undelete_all">Cancel select</string>
    <string name="action_AP_T_STA">AP to STA</string>
    <string name="action_STA_T_AP">STA to AP</string>
    <string name="action_AP_T_STA_Success">Set successful, restart the device manually</string>
    <string name="action_AP_T_STA_Failed">Set failure</string>
    <string name="action_STA_T_AP_Success">Device conversion successful, restarting</string>
    <string name="action_STA_T_AP_Failed">Set failure</string>
    <string name="action_system_setting">System setting</string>
    <string name="action_alarm_sound">Alarm sound</string>
    <string name="action_app_version">App version</string>
    <string name="action_change_system_password">Change user password</string>
    <string name="action_about">About</string>
    <string name="action_change_login_password">Change Password</string>
    <string name="device_logn_old_pwd">Original password</string>
    <string name="device_reboot">Device is restarting, please quit app to reconnect</string>
    <string name="action_send">Sent</string>
    <string name="string_device_name">Device name</string>
    <string name="action_change_device_name">Renewal device name</string>
    <string name="action_Success">Set successful</string>
    <string name="action_Failed">Set failure</string>
    <string name="action_manager_push">Manage push</string>
    <string name="string_DevAdvancedSettings">Advanced settings</string>
    <string name="string_DevAdvancedSettings_IsSoundPlay">Device prompting sound switch</string>
    <string name="string_DevAdvancedSettings_AlmTimeLen">Alarm video time</string>
    <string name="action_reset_origin">Reset origin</string>
    <string name="string_DevAdvancedSettings_TFManage">Manage video volume</string>
    <string name="string_DevAdvancedSettings_MotionSensitivity">Sensitivity of image detection</string>
    <string name="action_version">Device Version</string>
    <string name="action_request_ssid">Write wifi information</string>
    <string name="SmartConfigOver">Configuration finish</string>
    <string name="SmartConfig">Intelligent configuration</string>
    <string name="SmartConfig_connect">Connect</string>
    <string name="SmartConfiging">SmartConfiging...</string>
    <string name="action_record_recycle">Full day video</string>
    <string name="action_record_stop">Stop video</string>
    <string name="action_sd_format">Format</string>
    <string name="action_volume_total">Total volume</string>
    <string name="action_volume_record">Video partition</string>
    <string name="action_volume_left_percent">Volume left percent</string>
    <string name="action_volume_left">Volume left</string>
    <string name="action_volume_used">Used</string>
    <string name="action_Success_Reboot">Set up successfully and restart the device to take effect</string>
    <string name="action_mine">Me</string>
    <string name="action_push">Push switch</string>
    <string name="string_DevAdvancedSettings_PushInterval">Message push interval</string>
    <string name="string_DevAdvancedSettings_PIRSensitivity">Photosensitivity</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="string_second">Second</string>
    <string name="string_miniute">Miniute</string>
    <string name="action_dev_pwd_limit_lessthan_19">Password cannot exceed 19 digits</string>
    <string name="action_check_remeber_pwd">Auto Login</string>
    <string name="string_smart_device">Smart device</string>
    <string name="action_clear">Delete all</string>
    <string name="action_visitor_mode_disable_excute">Visitor mode, cannot operate.</string>
    <string name="string_user">User name</string>
    <string name="string_user_colon2">User name:</string>
    <string name="string_input_email_address">Input email address</string>
    <string name="string_pwd">Password</string>
    <string name="string_user_email">User Email</string>
    <string name="string_user_password">Password</string>
    <string name="string_new_pwd_title">password</string>
    <string name="string_confirm_pwd_title">Confirm password</string>
    <string name="string_input_new_password">Input new password</string>
    <string name="string_input_password">Input password</string>
    <string name="string_confirm_new_password">Confirm password</string>
    <string name="action_input_verify_code">Input verity code</string>
    <string name="action_get_verify_code">Get verity code</string>
</resources>