<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/action_NULL"
        android:orderInCategory="1"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="1"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_unselect_all"
        android:orderInCategory="1"
        android:title="@string/action_undelete_all"
        app:showAsAction="ifRoom" />

</menu>