<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LedControlActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/action_led_model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/segmented2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_corner_radius="5dp"
        segmentedgroup:sc_tint_color="#2cae5e"
        segmentedgroup:sc_unchecked_tint_color="#f0f0f0">

        <RadioButton
            android:id="@+id/btn_mode_1"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_led_model_1" />

        <RadioButton
            android:id="@+id/btn_mode_2"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_led_model_2" />

        <RadioButton
            android:id="@+id/btn_mode_3"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_led_model_3" />

        <RadioButton
            android:id="@+id/btn_mode_4"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_led_model_4" />
    </info.hoang8f.android.segmented.SegmentedGroup>

</android.support.constraint.ConstraintLayout>