<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/string_user"
        android:textColor="@color/appGreenColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/string_input_email_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/string_input_password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/editText_confirm_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/string_confirm_new_password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />


    <EditText
        android:id="@+id/editText_checknum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/action_input_verify_code"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/sender_check_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_confirm_pwd" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/email_register_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_green_corner"
        android:text="@string/action_Register"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_checknum" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/string_new_pwd_title"
        android:textColor="@color/appGreenColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_password" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/string_confirm_pwd_title"
        android:textColor="@color/appGreenColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_confirm_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_confirm_pwd" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/sender_check_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_green_corner"
        android:text="@string/action_get_verify_code"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/editText_checknum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_checknum" />


</android.support.constraint.ConstraintLayout>