<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/appicon"
                android:src="@drawable/appicon100"
                android:background="@drawable/shape_quart_green"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                />

            <ImageView
                android:background="@drawable/shape_quart_green"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/tx_user"
                android:layout_below="@id/appicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_user"
                android:textColor="@color/appGreenColor"
                android:maxLines="1"
                android:singleLine="true" />

            <android.support.design.widget.TextInputLayout
                android:layout_below="@id/tx_user"
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_user_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tx_password"
                android:layout_below="@id/emailTextInputLayout"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_user_password"
                android:textColor="@color/appGreenColor"
                android:maxLines="1"
                android:singleLine="true" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_below="@id/tx_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_user_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_below="@id/passwordTextInputLayout"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:textColor="#969696"
                android:theme="@style/MyCheckBox"
                android:text="@string/action_check_remeber_pwd"
                />

            <Button
                android:id="@+id/forget_button"
                android:layout_below="@id/passwordTextInputLayout"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/action_Forgetpwd"
                android:textColor="@drawable/button_gray_text_color" />


            <Button
                android:id="@+id/email_login_in_button"
                android:layout_below="@id/checkbox"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_green_corner"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/register_button"
                android:layout_below="@id/email_login_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_white_corner"
                android:text="@string/action_Register"
                android:textColor="#666666"/>

            <Button
                android:id="@+id/visitor_button"
                android:layout_below="@id/register_button"
                android:textColor="@drawable/button_green_text_color"
                android:background="@color/transparent"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left"
                android:layout_height="wrap_content"
                android:text="@string/action_visitor" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>