<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AlarmListFragment">

    <View
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#2197d8"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_height="44dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/action_alarm"
        />

    <Button
        android:textAllCaps="false"
        android:id="@+id/clear_button"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:gravity="right|center"
        android:text="@string/action_clear"
        android:textColor="@drawable/white_text_color"
        android:textSize="14sp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/refresh_button"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:gravity="left|center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/transparent"
        android:text="@string/action_refresh"
        android:clickable="true"
        android:textColor="@drawable/white_text_color"
        android:textSize="14sp" />



    <com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout

        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/navigation">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/alarm_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />
    </com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout>
</RelativeLayout>